--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: Your Name
-position: Ph.D. Student
-affiliation: Your Affiliation
-email: yourname (at) example.edu
+title: Chi Zhang
+position: Ph.D. Candidate
+affiliation: School of Computer Science and Engineering, NTU
+email: chi007(at)e.ntu.edu.sg
 keywords: minimal academic
-google_scholar: https://scholar.google.com/
-github_link: https://github.com/yaoyao-liu/minimal-light
-linkedin: https://www.linkedin.com/
+google_scholar: https://scholar.google.com/citations?user=J4s398EAAAAJ&hl=ja
+github_link: https://github.com/icoz69
+linkedin: https://www.linkedin.com/in/zhang-chi-835a20184/
 avatar: ./assets/img/avatar.png
 google_analytics: UA-111540567-4
 favicon: ./assets/img/favicon.png
