--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ position: Ph.D. Candidate
 affiliation: School of Computer Science and Engineering, NTU
 email: chi007(at)e.ntu.edu.sg
 keywords: minimal academic
-google_scholar: https://scholar.google.com/citations?user=J4s398EAAAAJ&hl=ja
+google_scholar: https://scholar.google.com.sg/citations?user=J4s398EAAAAJ&hl
 github_link: https://github.com/icoz69
 linkedin: https://www.linkedin.com/in/zhang-chi-835a20184/
 avatar: ./assets/img/Picture1.png
