--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Chi Zhang
 position: Ph.D. Candidate
-affiliation: School of Computer Science and Engineering, NTU
+affiliation: SCSE, NTU
 email: chi007(at)e.ntu.edu.sg
 keywords: minimal academic
 google_scholar: https://scholar.google.com.sg/citations?user=J4s398EAAAAJ&hl
