--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Chi Zhang
 position: Ph.D. Candidate
 affiliation: SCSE, NTU
-email: chi007(at)e.ntu.edu.sg
+email: dr(dot)zhang(dot)chi@outlook.com
 keywords: minimal academic
 google_scholar: https://scholar.google.com.sg/citations?user=J4s398EAAAAJ&hl
 github_link: https://github.com/icoz69
