--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Chi Zhang
-position: Ph.D. Candidate
-affiliation: SCSE, NTU
+position: AI Scientist
+affiliation: Tencent
 email: dr(dot)zhang(dot)chi@outlook.com
 keywords: minimal academic
 google_scholar: https://scholar.google.com.sg/citations?user=J4s398EAAAAJ&hl
