--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Chi Zhang
-position: AI Scientist
-affiliation: Tencent
-email: dr(dot)zhang(dot)chi@outlook.com
+position: Assistant Professor
+affiliation: Westlake University 
+email: chizhang (at) westlake (dot) edu (dot) cn
 keywords: minimal academic
 google_scholar: https://scholar.google.com.sg/citations?user=J4s398EAAAAJ&hl
 github_link: https://github.com/icoz69
