--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Chi Zhang
 position: Assistant Professor
-affiliation: Westlake University 
+affiliation: AGI Lab, Westlake University 
 email: chizhang (at) westlake (dot) edu (dot) cn
 keywords: minimal academic
 google_scholar: https://scholar.google.com.sg/citations?user=J4s398EAAAAJ&hl
